@@ -19,6 +19,7 @@
  Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
 
 */
+
 ?>
 <?php show_box_top(_('Catalog Statistics')); ?>
 <table cellspacing="1" cellpadding="3" width="100%" border="0"> 
@@ -33,14 +34,14 @@
 	<td><?php echo _('Catalog Time'); ?></td>
 </tr>
 <tr>
-	<td><?php echo $results['connected']; ?></td>
-	<td><?php echo $results['users'] ?></td>
-	<td><?php echo $results['albums']; ?></td>
-	<td><?php echo $results['artists']; ?></td>
-	<td><?php echo $results['songs']; ?></td>
-	<td><?php echo $results['genres']; ?></td>
-	<td><?php echo $total_size; ?> <?php echo $size_unit; ?></td>
-	<td><?php echo $time_text; ?></td>
+	<td><?php echo $stats['connected']; ?></td>
+	<td><?php echo $stats['users'] ?></td>
+	<td><?php echo $stats['albums']; ?></td>
+	<td><?php echo $stats['artists']; ?></td>
+	<td><?php echo $stats['songs']; ?></td>
+	<td><?php echo $stats['genres']; ?></td>
+	<td><?php echo $stats['total_size']; ?> <?php echo $stats['size_unit']; ?></td>
+	<td><?php echo $stats['time_text']; ?></td>
 </tr>
 </table>
 <?php show_box_bottom(); ?>
