@@ -4,6 +4,8 @@
 
 --------------------------------------------------------------------------
   v.3.4-Alpha3 
+	- Moved catalog stats off to statistics page
+	- Added basic sorting to all browse pages
 	- Tweaked the Playback to try to fix some issues with WMP
 	- Reduced the timeout on the LastFM Plugin to reduce delay
 		when scrobbling is down
